// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction Transaction create when called with a valid transaction should return created tx 1`] = `
Array [
  "925b36e897e551df887c7ca6953766f56c0054552810753b838dfe05a833f149200e95ee97b82ade6e143fba52fa643ddd38fb4be3186b77b1035971d011d70a",
]
`;

exports[`transaction Transaction create when called with multi-signature account in input should return created tx 1`] = `
Array [
  "925b36e897e551df887c7ca6953766f56c0054552810753b838dfe05a833f149200e95ee97b82ade6e143fba52fa643ddd38fb4be3186b77b1035971d011d70a",
  "",
]
`;

exports[`transaction Transaction create when called with nonce equal to zero in input should return created tx 1`] = `
Array [
  "48a20c01fdc3ce6f9178d3275a101e2fde62eea20c497530abb8f88d0d2862a66c27c319323cad6ded7647d0934d1bc36d940285f8aaaddb5dfd6fe324977f0d",
]
`;

exports[`transaction Transaction create when called with optional keys in input should return created tx 1`] = `
Array [
  "925b36e897e551df887c7ca6953766f56c0054552810753b838dfe05a833f149200e95ee97b82ade6e143fba52fa643ddd38fb4be3186b77b1035971d011d70a",
]
`;

exports[`transaction Transaction create when called without sender public key in input should return created tx 1`] = `
Array [
  "925b36e897e551df887c7ca6953766f56c0054552810753b838dfe05a833f149200e95ee97b82ade6e143fba52fa643ddd38fb4be3186b77b1035971d011d70a",
]
`;

exports[`transaction Transaction decode transaction from input as buffer should return decoded transaction 1`] = `
Object {
  "command": "transfer",
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      116,
      198,
      128,
      147,
      238,
      181,
      55,
      166,
      114,
      181,
      57,
      160,
      183,
      70,
      212,
      192,
      169,
      102,
      248,
      94,
      221,
      18,
      148,
      116,
      213,
      248,
      112,
      41,
      174,
      250,
      16,
      185,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 54n,
  "params": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction decode transaction from input as hex should return decoded transaction 1`] = `
Object {
  "command": "transfer",
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      116,
      198,
      128,
      147,
      238,
      181,
      55,
      166,
      114,
      181,
      57,
      160,
      183,
      70,
      212,
      192,
      169,
      102,
      248,
      94,
      221,
      18,
      148,
      116,
      213,
      248,
      112,
      41,
      174,
      250,
      16,
      185,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 54n,
  "params": Object {
    "amount": 10000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        101,
        64,
        135,
        194,
        223,
        135,
        4,
        2,
        171,
        11,
        25,
        150,
        97,
        111,
        211,
        53,
        93,
        97,
        246,
        44,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      221,
      79,
      242,
      85,
      254,
      4,
      221,
      1,
      89,
      164,
      104,
      233,
      233,
      200,
      135,
      44,
      79,
      68,
      102,
      34,
      15,
      126,
      50,
      99,
      119,
      160,
      206,
      185,
      223,
      47,
      162,
      26,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        121,
        203,
        41,
        220,
        167,
        187,
        159,
        206,
        115,
        161,
        232,
        202,
        40,
        38,
        79,
        119,
        144,
        116,
        210,
        89,
        195,
        65,
        181,
        54,
        186,
        233,
        165,
        76,
        10,
        46,
        71,
        19,
        88,
        15,
        203,
        25,
        47,
        159,
        21,
        244,
        55,
        48,
        101,
        13,
        105,
        187,
        31,
        61,
        207,
        180,
        203,
        109,
        167,
        214,
        156,
        169,
        144,
        167,
        99,
        237,
        120,
        86,
        151,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`transaction Transaction sign when called with multi-signature account in input should return created tx 1`] = `
Array [
  "925b36e897e551df887c7ca6953766f56c0054552810753b838dfe05a833f149200e95ee97b82ade6e143fba52fa643ddd38fb4be3186b77b1035971d011d70a",
  "49d372534c1bb5243105953f3146b796a939b7e72b9fc8a9d834f47c393e958395de009063a5b250b94dc1853e5a2f4d039034656baebaa682d26aba48d61308",
]
`;

exports[`transaction Transaction sign when called with optional keys in input should return created tx 1`] = `
Array [
  "925b36e897e551df887c7ca6953766f56c0054552810753b838dfe05a833f149200e95ee97b82ade6e143fba52fa643ddd38fb4be3186b77b1035971d011d70a",
  "49d372534c1bb5243105953f3146b796a939b7e72b9fc8a9d834f47c393e958395de009063a5b250b94dc1853e5a2f4d039034656baebaa682d26aba48d61308",
]
`;
